# CASpy

./: LICENSE  README.md  functions.py  general_solver_mdea_lnk.txt  main.py  pyproject.toml
src/CASpy_ReactionEquilibria/: caspy.py
src/tests/: basic_test_A_B.txt  basic_test_A_B_lnK.txt  test_caspy.py
