[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CASpy_ReactionEquilibria"
version = "0.1.6"
authors = [
  { name="H. Mert Polat", email="h.m.polat@tudelft.nl" },
]
description = "CASpy package to solve reaction equilibria"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/omoultosEthTuDelft/CASpy"

